--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
+      <label for="fullname"></label>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
+      <label for="email"></label>
+      <input type="email" id="email" name="email" placeholder="Enter Email" required>
+      <label for="phone"></label>
+      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
+      <label for="message"></label>
+      <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+      <input type="checkbox" name="checkbox" value="dance">Dance
+      <input type="submit" value="submit">
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
