--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+<form action="#" method="GET">
+<label for="fullname"> </label>
+<input type="text" id="fullname" name="fullname" required="" placeholder="Enter Name"><br>
+<label for="email"> </label>
+<input type="email" id="email" name="email" required="" placeholder="Enter Email"><br>
+<label for="phone"> </label>
+<input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)"><br>
 
+<label for="message"> </label>
+<textarea type="message" id="message" name="message" placeholder="Enter Message"></textarea><br>
+
+
+
+<h3>My Hobbies</h3>
+<input id="checkbox" type="checkbox" name="hobby1" value="cooking">cooking<br>
+<input id="checkbox" type="checkbox" name="hobby2" value="travellling">travelling<br>
+<input id="checkbox" type="checkbox" name="hobby3" value="running">running<br>
+
+<input type="submit" value="Submit">
+</form>
 
       <!-- Add a label for 'fullname'-->
 
@@ -43,6 +62,6 @@
 
       <!-- Add an input with the type set to 'submit' -->
 
-    
+
   </body>
 </html>
