--- a/index.html
+++ b/index.html
@@ -11,37 +11,42 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
+<form action="post">
 
       <!-- Add a label for 'fullname'-->
-
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
+<label for="fullname"></label>
+<input type="text" id="fullname" required placeholder="Enter Name">
+<!-- Add a text input with the id and name attributes set to 'fullname' -->
+<!-- Include the place holder text "Enter Name" and make this input required -->
 
 
       <!-- Add a label for 'email'-->
-
+      <label for="email"></label>
+      <input type="email" id="email" required placeholder="Enter Email">
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
 
 
       <!-- Add a label for 'phone'-->
-
+      <label for="phone"></label>
+      <input type="tel" id="phone" placeholder="Enter Telephone (optional)">
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
 
 
       <!-- Add a label for 'message'-->
-
+      <label for="message"></label>
+      <textarea type="textarea" id="message" placeholder="Enter Message">
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
 
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
+      <input type="checkbox" id="checkbox">
 
       <!-- Add an input with the type set to 'submit' -->
+      <input type="submit" value="submit">
+    </form>
 
     
   </body>
