--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
 
-
+<form action="https://mhdziada.com/store.php">
+  <label for="fullname">fullname:</label>
+  <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
+  <label for="email">email:</label>
+  <input type="email" id="email" name="email" placeholder="Enter Email" required>
+  <label for="phone">phone:</label>
+  <input type="phone" id="phone" name="phone" placeholder="Enter Telephone (optional)">
+  <label for="message">message:</label>
+  <input type="textarea" id="message" name="message" placeholder="Enter Message">
+  <input type="checkbox" id="checkbox">
+  <input type="submit">
+</form>
       <!-- Add a label for 'fullname'-->
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
