--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <label for="email">email:</label>
   <input type="email" id="email" name="email" placeholder="Enter Email" required>
   <label for="phone">phone:</label>
-  <input type="phone" id="phone" name="phone" placeholder="Enter Telephone (optional)">
+  <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
   <label for="message">message:</label>
-  <input type="textarea" id="message" name="message" placeholder="Enter Message">
+  <textarea type="textarea" id="message" name="message" placeholder="Enter Message">
   <input type="checkbox" id="checkbox">
   <input type="submit">
 </form>
