--- a/index.html
+++ b/index.html
@@ -3,46 +3,40 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>My Awesome Company Contact Page</title>
+    <title>Babysitting contact</title>
   </head>
   <body>
 
-    <h1>Company Inc.</h1>
-    <h2>For all your incorporated company needs</h2>
+    <h1>BabyCare.</h1>
+    <h2>we care for your kids</h2>
 
-    <!-- First, create a form tag where our inputs will be nested -->
-
-
-      <!-- Add a label for 'fullname'-->
-
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
+    <form>
+      <label for='fullname'>fullname</label>
+      <input type="text" id="fullname" name="fullname" placeholder="Enter Name" required>
 
 
-      <!-- Add a label for 'email'-->
+      
+      <label for="email">parents Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter Email" required>
 
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
-      <!-- Add a label for 'phone'-->
-
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
-
-
-
-      <!-- Add an input with the type set to 'submit' -->
 
     
+      <label for="phone">parents Telephone </label>
+      <input type="tel" id="phone" name="phone" placeholder="Enter Telephone (optional)">
+
+
+
+      <label for="message">Anything we should know about your kid?</label>
+      <textarea id="message" name="message" placeholder="Enter Message">
+
+
+      <h3>What are the activitys your sun likes the most</h3>
+      <input type="checkbox" id="checkbox" name="activity1" value="kong"> Build something out of trash/recycling items.<br>
+      <input type="checkbox" id="checkbox" name="activity2" value="stuffed-animals">Catch fireflies.<br>
+      <input type="checkbox" id="checkbox" name="activity3" value="rope-toys">Climb a tree<br>
+      <input type="checkbox" id="checkbox" name="activity4" value="squeaky-toys">Go bird watching<br>
+
+      <input type="submit" value="We try to provide the best :)">
+      </form>
   </body>
 </html>
