--- a/index.html
+++ b/index.html
@@ -11,37 +11,30 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+<form>
 
-
-      <!-- Add a label for 'fullname'-->
-
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
-
-
-      <!-- Add a label for 'email'-->
-
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
-      <!-- Add a label for 'phone'-->
-
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
-
-
-      <!-- Add a checkbox input with the id set to 'checkbox' -->
+      <label for="fullname">name:</label>
+      <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
 
 
 
-      <!-- Add an input with the type set to 'submit' -->
+      <label for="email">email:</label>
+      <input type="email" name="email" id="email" placeholder="Enter Email" required>
+
+
+      <label for="phone">phone:</label>
+      <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
+
+
+      <label for="message">message:</label>
+      <textarea type="textarea" name="message" placeholder="leaEnter Message" id="message"></textarea>
+
+
+      <input type="checkbox" id="checkbox" >
+
+
+      <input type="submit">
+</form>
 
     
   </body>
