--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
 
+    <form action="#">
+      <label for="fullname">Full Name</label>
+      <input name="full-name" type="text" id="fullname" placeholder="Enter Name" required>
+
+      <label for="email">Email</label>
+      <input name="email" type="email" id="email" placeholder="Enter Email" required>
+
+      <label for="phone">Telephone</label>
+      <input name="tel" type="tel" id="phone" placeholder="Enter Telephone (optional)">
+
+      <label for="message">Message</label>
+      <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+
+      <!-- <h3>How hard was the form?</h3>
+
+      <input type="checkbox" name="option-1" value="hard">Hard
+      <input type="checkbox" name="option-2" value="normal">Normal
+      <input type="checkbox" name="option-3" value="easy">Easy -->
+
+      <h3>What are your dogs favorite toys?</h3>
+      <input type="checkbox" name="toy-1" value="kong"> Kong <br>
+      <input type="checkbox" name="toy-2" value="stuffed-animals">Stuffed Animals<br>
+      <input type="checkbox" name="toy-3" value="rope-toys">Rope Toys<br>
+      <input type="checkbox" name="toy-4" value="squeaky-toys">Squeaky Toys<br>
+      <input type="checkbox" name="toy-5" value="balls">Balls, Frisbees, anything a dog can fetch!<br>
+
+      <input type="submit">
+    </form>
 
       <!-- Add a label for 'fullname'-->
 
